First versin, ready to test

--- a/Image_Recognizer_Tutorial.ipynb
+++ b/Image_Recognizer_Tutorial.ipynb
@@ -11,16 +11,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This tutorial is a concise step by step guide for building and training image classification on **any** image dataset of your choice.<br>\n",
+    "This tutorial is a concise step-by-step guide for building and training an Image Recongizer on **any** image dataset of your choice.<br>\n",
     "\n",
     "By the end of this tutorial, you will be able to:\n",
     "\n",
-    "- Scrape images from Google Images and create your own Image dataset\n",
-    "- Train and run an image classifier, using a Deep Neural Network\n",
+    "- Scrape images from Google and create your own dataset\n",
+    "- Build and train an image recognizer for your dataset\n",
     "- Visualize and adequately interpret classification results\n",
-    "- Apply classification model to new test images\n",
+    "- Test model with new images\n",
     " \n",
-    "The tutorial uses [Fastai library](https://docs.fast.ai/index.html), so please have it installed on your machine. If you are new to this, simply set up a Google Cloud Virtual Machine following [this guide](https://course.fast.ai/start_gcp.html) -- it may take you few minutes but it will be great learning experience."
+    "This tutorial uses [fastai library](https://docs.fast.ai/index.html), so we acknoweldge and thank Jeremry Howard for creating all the beautiful fastai content."
    ]
   },
   {
@@ -36,14 +36,13 @@
    "source": [
     "If you would like to use your own image dataset for this tutorial, rearrange the dataset in a way that images of same class are under same folder. Name the folders with the class labels.\n",
     "\n",
-    "If you do not have an available dataset and would like to scrape one from Google Images, install [Fatkun Batch Download Image](https://chrome.google.com/webstore/detail/fatkun-batch-download-ima/nnjjahlikiabnchcpehcpkdeckfgnohf) extension on your google chrome browser. After successffully installing the extension, you can download any set of google images by simply clicking the extension tab. There are other ways to scrape Google Images, I find this way to be the most convinient. \n",
+    "If you do not have a ready dataset and would like to scrape one from Google Images, install [Fatkun Batch Download Image](https://chrome.google.com/webstore/detail/fatkun-batch-download-ima/nnjjahlikiabnchcpehcpkdeckfgnohf) extension on your google chrome browser. You can then download any set of google images by simply clicking the extension tab. There are several ways to scrape Google Images, I find this to be the most convinient. \n",
     "\n",
     "Move all of your folders to your notebook directory or the path of your choice.\n",
     "\n",
     "For instance, in this tutorial we will be classifying **Monkeys Faces**, so we created 6 folders corresponding to the 6 different types of monkeys and uploaded them to our GCP VM instance, as shown below.<br><br>\n",
     "\n",
-    "\n",
-    "<img src=\"./../Tutorial1_img1.png\" width=\"400\"/>"
+    "**link to google drive image** <img src=\"./../Tutorial1_img1.png\" width=\"400\"/>"
    ]
   },
   {
@@ -57,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**_For a further explanation of the code and functions used, check out my other blog: Concise Image Recongition using Fastai_**"
+    "**_For a further explanation of the code and functions used, check out my other post: Concise Image Recongition using Fastai_**"
    ]
   },
   {
@@ -70,7 +69,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%reload_ext autoreload\n",
@@ -81,7 +82,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from fastai.vision import *\n",
@@ -91,7 +94,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "bs = 64  #batch size: if your GPU is running out of memory, set a smaller batch size, i.e 16\n",
@@ -116,7 +121,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -145,7 +152,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -344,7 +353,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data  = ImageDataBunch.from_folder(PATH, ds_tfms=get_transforms(), size=sz, bs=bs, valid_pct=0.2).normalize(imagenet_stats)"
@@ -353,7 +364,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -377,7 +390,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -406,10 +421,12 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "learn = create_cnn(data, models.resnet34, metrics=accuracy)"
+    "learn = cnn_learner(data, models.resnet34, metrics=accuracy)"
    ]
   },
   {
@@ -422,7 +439,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -459,7 +478,7 @@
     "\n",
     "- The second learning rate is 10x smaller than the first learning rate, so 1e-03 in our example.\n",
     "\n",
-    "The plot may be different for your dataset, so make sure to pick these two learning rates according to your plot.\n",
+    "The plot will be different for your dataset, so make sure to pick these two learning rates accordingly.\n",
     "\n",
     "<br>Replace your chosen learning rates in the **slice** fucntion below and let's train the model"
    ]
@@ -467,7 +486,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -572,7 +593,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "interp = ClassificationInterpretation.from_learner(learn)"
@@ -582,13 +605,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can start by visualizing a confusion matrix, which ...."
+    "We can start by visualizing a confusion matrix. The diagonal elements represent the number of images for which the predicted label is equal to the true label, while off-diagonal elements are those that are mislabeled by the classifier."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -611,13 +636,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also plot images with top losses; in other words, ....\n"
+    "We can also plot images with top losses. A high loss implies high confidence about the wrong answer. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -640,6 +668,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Images are shown along with top losses:<br> \n",
+    "prediction label / actual label / loss / probability of actual image class."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Testing the model on a new image"
    ]
   },
@@ -647,26 +683,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, congratulations! You have successfully built an Image Recognizer on your own image dataset."
+    "#### Congratulations! You have successfully built an Image Recognizer on your own dataset. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you would like to test your model with a new set of test images it has never seen before, you can simply run the following:\n",
-    "\n",
-    "If you acquire or download a new image and want to classify based on the built model, simply run the following:\n",
-    "\n",
-    "Dont' have an image, Try a new image by....\n",
-    "\n",
-    "go to google images or uplash and download some monkey image and let your model classify it."
+    "Let's now feed it a new image that it never seen before and see how well it classifies it. Place the image within the directory or in your desired path."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "path = '../Test Images/' #The path of your test image\n",
@@ -684,30 +716,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Of course, we could further fine tune this model and adjust the weights across all 34 layers. We could also replace ResNet-34 with a larger model, e.g. ResNet-50.\n",
+    "Congratulations on compeleting this tutorial!\n",
     "\n",
-    "There are also other ways, such as deleting the top loss pictures. We will see more of this in the future tutorials."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Aknowedlgement: "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "if you like, clap"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now go and celebrate!"
+    "There are several ways to further improve the model, such as increasing the model depth and \n"
    ]
   }
  ],
