Added different datasets options

--- a/Image_Recognizer_Tutorial.ipynb
+++ b/Image_Recognizer_Tutorial.ipynb
@@ -27,6 +27,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-11-c81c22d4ad3e>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-c81c22d4ad3e>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    <a id=\"https://drive.google.com/file/d/1OGX_jUxDqtTE0WNBiE-_2nDTeiWOoJee/view?usp=sharing\" class=\"goog-inline-block jfk-button jfk-button-action\" href=\"/uc?export=download&amp;confirm=ABCD&amp;id=### file ID ###\">download</a>\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "<a id=\"https://drive.google.com/file/d/1OGX_jUxDqtTE0WNBiE-_2nDTeiWOoJee/view?usp=sharing\" class=\"goog-inline-block jfk-button jfk-button-action\" href=\"/uc?export=download&amp;confirm=ABCD&amp;id=### file ID ###\">download</a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image_Recognition_Basics.ipynb\t README.md\r\n",
+      "Image_Recognizer_Tutorial.ipynb  Tutorial1_img1.png\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -45,16 +86,25 @@
     "\n",
     "If you do not have a dataset in-hand, you can scrape images from _Google Images_ and make up a dataset of your choice. In order to do so, simply install [Fatkun Batch Download Image](https://chrome.google.com/webstore/detail/fatkun-batch-download-ima/nnjjahlikiabnchcpehcpkdeckfgnohf) extension on your google chrome browser and download any set of google images by clicking the extension tab. Place all images of same class under same folder and name it with the class label.  \n",
     "\n",
-    "Option 3: Working with a ready dataset of your own\n",
+    "Option 3: Working with my Monkeys Faces dataset\n",
     "\n",
     "If you choose to simply work with my Monkeys Faces dataset, follow these few steps to download the dataset and make it accessible by your Colab:\n",
-    "    1. Download dataset from \n",
+    "    1. Download dataset from https://drive.google.com/file/d/1OGX_jUxDqtTE0WNBiE-_2nDTeiWOoJee/view directly to your google drive. You should be able to do so by clicking the icon \"Organize\" or \"Add to My Drive\"\n",
+    "    \n",
+    "    2. The downloaded file is a zip, so you would want to unzip\n",
     "\n",
     "you may download it from my gdrive and make sure to upload it to your Colab. \n",
     "\n",
     "For instance, in this tutorial we will be classifying **Monkeys Faces**, so we created 6 folders corresponding to the 6 different types of monkeys, as shown below.<br><br>\n",
     "\n",
     "<img width=\"386\" alt=\"Tutorial1_img1\" src=\"https://user-images.githubusercontent.com/8379428/56394394-1c827a80-61ec-11e9-8cf2-42c0b87fffb6.png\">\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you are running this on Colab, have the dataset saved in your google drive. If you are running this locally or at some VM, save the dataset on the path of your choice or preferebaly in the same path of this notebook."
    ]
   },
   {
@@ -113,9 +163,7 @@
    "source": [
     "bs = 64  #batch size: if your GPU is running out of memory, set a smaller batch size, i.e 16\n",
     "sz = 224 #image size\n",
-    "PATH = './'\n",
-    "\n",
-    "https://drive.google.com/open?id=1jPuYsqrpCFRKhfQmUu0KeIUNdZqbG_Bi"
+    "PATH = './'"
    ]
   },
   {
