Downloading dataset fixed

--- a/Image_Recognizer_Tutorial.ipynb
+++ b/Image_Recognizer_Tutorial.ipynb
@@ -16,55 +16,12 @@
     "In this tutorial, you will learn how to:\n",
     "\n",
     "- Scrape images from Google Images and create your own dataset\n",
-    "- Build and train an image recognizer for your dataset\n",
+    "- Build and train an image recognizer on your dataset\n",
     "- Visualize and adequately interpret classification results\n",
     "- Test model with new images\n",
     "\n",
     "To simply run this notebook, you can download it [here](https://drive.google.com/open?id=1MNpxqMGvg2IanZfmLmtpUFqjUUGb3Wuv) and upload it to your Google [Colab](https://colab.research.google.com/notebooks/welcome.ipynb#recent=true). <br>Once uploaded to Colab, **make sure to change the following to enable GPU backend,** <br>\n",
-    "> Runtime -> Change runtime type -> Hardware Accelerator -> GPU\n",
-    "\n",
-    "If you want to rather fork and clone this notebook, following is the [link](). "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-11-c81c22d4ad3e>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-c81c22d4ad3e>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    <a id=\"https://drive.google.com/file/d/1OGX_jUxDqtTE0WNBiE-_2nDTeiWOoJee/view?usp=sharing\" class=\"goog-inline-block jfk-button jfk-button-action\" href=\"/uc?export=download&amp;confirm=ABCD&amp;id=### file ID ###\">download</a>\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "<a id=\"https://drive.google.com/file/d/1OGX_jUxDqtTE0WNBiE-_2nDTeiWOoJee/view?usp=sharing\" class=\"goog-inline-block jfk-button jfk-button-action\" href=\"/uc?export=download&amp;confirm=ABCD&amp;id=### file ID ###\">download</a>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Image_Recognition_Basics.ipynb\t README.md\r\n",
-      "Image_Recognizer_Tutorial.ipynb  Tutorial1_img1.png\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!ls"
+    "> Runtime -> Change runtime type -> Hardware Accelerator -> GPU"
    ]
   },
   {
@@ -78,26 +35,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Option 1: Working with a ready dataset of your own\n",
+    "**Option 1:** Working with a ready dataset of your own\n",
     "\n",
     "If you would like to use your own image dataset for this tutorial, rearrange it in a way that images of same class are under same folder. Then, name the folders with the corresponding class labels.\n",
     "\n",
-    "Option 2: Scrape images from Google Images and make up a dataset\n",
+    "**Option 2:** Scrapping images from Google Images and making up a dataset\n",
     "\n",
-    "If you do not have a dataset in-hand, you can scrape images from _Google Images_ and make up a dataset of your choice. In order to do so, simply install [Fatkun Batch Download Image](https://chrome.google.com/webstore/detail/fatkun-batch-download-ima/nnjjahlikiabnchcpehcpkdeckfgnohf) extension on your google chrome browser and download any set of google images by clicking the extension tab. Place all images of same class under same folder and name it with the class label.  \n",
+    "If you do not have a dataset in-hand, you can scrape images from [Google Images](https://www.google.com/imghp?hl=en) and make up a dataset of your choice. In order to do so, simply install [Fatkun Batch Download Image](https://chrome.google.com/webstore/detail/fatkun-batch-download-ima/nnjjahlikiabnchcpehcpkdeckfgnohf) extension on your google chrome browser and download any set of google images by clicking the extension tab. Place all images of same class under same folder and name it accordingly with the class label.  \n",
     "\n",
-    "Option 3: Working with my Monkeys Faces dataset\n",
+    "**Option 3:** Working with my Monkeys Faces dataset :)\n",
     "\n",
-    "If you choose to simply work with my Monkeys Faces dataset, follow these few steps to download the dataset and make it accessible by your Colab:\n",
-    "    1. Download dataset from https://drive.google.com/file/d/1OGX_jUxDqtTE0WNBiE-_2nDTeiWOoJee/view directly to your google drive. You should be able to do so by clicking the icon \"Organize\" or \"Add to My Drive\"\n",
-    "    \n",
-    "    2. The downloaded file is a zip, so you would want to unzip\n",
+    "You can easily download the dataset folder by uncommenting the command on the next cell. Then, upload the downloaded folder to your Colab."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "!wget \"https://www.dropbox.com/s/35ithckx6vqryob/Monkeys_Faces_Dataset.tar?dl=0\" -O Monkeys_Faces_Dataset.tar  \n",
+    "!tar -xvzf Monkeys_Faces_Dataset.tar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this tutorial, we will be classifying **Monkeys Faces**, so we created 6 folders corresponding to the 6 different types of monkeys, as shown below.<br><br>\n",
     "\n",
-    "you may download it from my gdrive and make sure to upload it to your Colab. \n",
-    "\n",
-    "For instance, in this tutorial we will be classifying **Monkeys Faces**, so we created 6 folders corresponding to the 6 different types of monkeys, as shown below.<br><br>\n",
-    "\n",
-    "<img width=\"386\" alt=\"Tutorial1_img1\" src=\"https://user-images.githubusercontent.com/8379428/56394394-1c827a80-61ec-11e9-8cf2-42c0b87fffb6.png\">\n"
+    "<img width=\"386\" alt=\"Tutorial1_img1\" src=\"https://user-images.githubusercontent.com/8379428/56394394-1c827a80-61ec-11e9-8cf2-42c0b87fffb6.png\">"
    ]
   },
   {
@@ -130,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -143,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -155,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -163,14 +134,14 @@
    "source": [
     "bs = 64  #batch size: if your GPU is running out of memory, set a smaller batch size, i.e 16\n",
     "sz = 224 #image size\n",
-    "PATH = './'"
+    "PATH = './Monkeys Faces'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "PATH is the folders path. You may keep ./ as if your folders are on the same directory as your notebook."
+    "PATH is the path containing all the class folders. You may keep './Monkeys Faces' if you are using my Monkeys Faces dataset."
    ]
   },
   {
@@ -182,7 +153,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['.DS_Store',\n",
+       " 'Macaque',\n",
+       " '._Orungatun',\n",
+       " 'Orungatun',\n",
+       " '._Macaque',\n",
+       " 'Chimpanzee',\n",
+       " 'Gorilla',\n",
+       " '._Chimpanzee',\n",
+       " '._.DS_Store',\n",
+       " '._Gorilla',\n",
+       " '._Gibbon',\n",
+       " 'Mandrill',\n",
+       " '._Mandrill',\n",
+       " 'Gibbon']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.listdir(PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -191,17 +197,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      ".DS_Store\n",
+      "Macaque\n",
+      "._Orungatun\n",
+      "Orungatun\n",
+      "._Macaque\n",
+      "Chimpanzee\n",
+      "Gorilla\n",
+      "._Chimpanzee\n",
+      "._.DS_Store\n",
+      "._Gorilla\n",
+      "._Gibbon\n",
+      "Mandrill\n",
+      "._Mandrill\n",
+      "Gibbon\n",
       "There are  0 classes: []\n"
      ]
     }
    ],
    "source": [
     "classes = []\n",
-    "for d in os.listdir(PATH): \n",
+    "for d in os.listdir(PATH):\n",
+    "    print (d)\n",
     "    if os.path.isdir(d) and not d.startswith('.'):\n",
-    "        classes.append(d)       \n",
+    "        classes.append(d) \n",
+    "        #print (\"here: \", d)\n",
     "\n",
     "print (\"There are \", len(classes), \"classes:\", classes)            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/jupyter/Cloud-Fastai-iNotes-iTutorials/Fastai-iNotes-iTutorials'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
    ]
   },
   {
