Tutorial well reviewed, all links working

--- a/Image_Recognizer_Tutorial.ipynb
+++ b/Image_Recognizer_Tutorial.ipynb
@@ -712,9 +712,7 @@
     }
    ],
    "source": [
-    "interp.plot_top_losses(9, figsize=(15,11), heatmap=False)\n",
-    "#Images are shown along with top losses:\n",
-    "#prediction label / actual label / loss / probability of actual image class."
+    "interp.plot_top_losses(9, figsize=(15,11), heatmap=False)"
    ]
   },
   {
