Tutorial well reviewed AGAIN

--- a/Image_Recognizer_Tutorial.ipynb
+++ b/Image_Recognizer_Tutorial.ipynb
@@ -20,7 +20,7 @@
     "- Visualize and adequately interpret classification results\n",
     "- Test model with new images\n",
     "\n",
-    "To run this notebook, you can simply use Google Colab [here](https://colab.research.google.com/github/SalChem/Fastai-iNotes-iTutorials/blob/master/Image_Recognizer_Tutorial.ipynb).\n",
+    "To run this notebook, you can simply open it with Google Colab [here](https://colab.research.google.com/github/SalChem/Fastai-iNotes-iTutorials/blob/master/Image_Recognizer_Tutorial.ipynb).\n",
     "\n",
     "<br>Once in Colab, **make sure to change the following to enable GPU backend,** <br>\n",
     "> Runtime -> Change runtime type -> Hardware Accelerator -> GPU"
@@ -45,9 +45,9 @@
     "\n",
     "If you do not have a dataset in-hand, you can scrape images from [Google Images](https://www.google.com/imghp?hl=en) and make up a dataset of your choice. In order to do so, simply install [Fatkun Batch Download Image](https://chrome.google.com/webstore/detail/fatkun-batch-download-ima/nnjjahlikiabnchcpehcpkdeckfgnohf) extension on your google chrome browser and download any set of google images by clicking the extension tab. Place all images of same class under same folder and name it accordingly with the class label.  \n",
     "\n",
-    "**Option 3:** Working with my Monkeys dataset :)\n",
+    "**Option 3:** Working with my Monkeys dataset, which I originally scraped from Google Images :)\n",
     "\n",
-    "You can easily download the dataset folder by uncommenting the command on the next cell."
+    "The dataset can be downloaded and untarred using the following couple bash commands."
    ]
   },
   {
@@ -70,7 +70,10 @@
    "source": [
     "In this tutorial, we will be classifying **Monkeys**, so we created 6 folders corresponding to 6 different types of monkeys, as shown below.<br><br>\n",
     "\n",
-    "<img width=\"186\" alt=\"Tutorial1_img1\" src=\"https://user-images.githubusercontent.com/8379428/56703803-5c9b9e80-66bf-11e9-8341-67873c896afb.png\">\n"
+    "<img width=\"186\" alt=\"Tutorial1_img1\" src=\"https://user-images.githubusercontent.com/8379428/56703803-5c9b9e80-66bf-11e9-8341-67873c896afb.png\">\n",
+    "\n",
+    "\n",
+    "If you choose to run this notebook with your dataset, simply replace the url and file name in the above cell with yours. Storing the .tar file in Dropbox worked best for me.\n"
    ]
   },
   {
@@ -689,7 +692,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also plot images with top losses. A high loss implies high confidence about the wrong answer. "
+    "We can also plot images with top losses; in other words, the images that the model was most confused about. A high loss implies high confidence about the wrong answer. "
    ]
   },
   {
