Resnet brief discussion added

--- a/Image_Recognizer_Tutorial.ipynb
+++ b/Image_Recognizer_Tutorial.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Deep Learning Tutorial 1: Build an Image Recognizer on your dataset in less 10 minutes"
+    "# Deep Learning Tutorial 1: Build an Image Recognizer on your dataset in less than 10 minutes"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This tutorial is a concise step-by-step guide for building and training an Image Recongizer on **any** image dataset of your choice.<br>\n",
+    "This tutorial is a concise step-by-step guide for building and training an Image Recognizer on **any** image dataset of your choice.<br>\n",
     "\n",
     "In this tutorial, you will learn how to:\n",
     "\n",
@@ -20,10 +20,12 @@
     "- Visualize and adequately interpret classification results\n",
     "- Test model with new images\n",
     "\n",
-    "To run this notebook, you can simply open it with Google Colab [here](https://colab.research.google.com/github/SalChem/Fastai-iNotes-iTutorials/blob/master/Image_Recognizer_Tutorial.ipynb).\n",
+    "**To run this notebook, you can simply open it with Google Colab [here](https://colab.research.google.com/github/SalChem/Fastai-iNotes-iTutorials/blob/master/Image_Recognizer_Tutorial.ipynb).**\n",
     "\n",
     "<br>Once in Colab, **make sure to change the following to enable GPU backend,** <br>\n",
-    "> Runtime -> Change runtime type -> Hardware Accelerator -> GPU"
+    "> Runtime -> Change runtime type -> Hardware Accelerator -> GPU\n",
+    "\n",
+    "### Let's start..."
    ]
   },
   {
@@ -39,11 +41,11 @@
    "source": [
     "**Option 1:** Working with a ready dataset of your own\n",
     "\n",
-    "If you would like to use your own image dataset for this tutorial, rearrange it in a way that images of same class are under same folder. Then, name the folders with the corresponding class labels.\n",
+    "If you would like to use your own image dataset for this tutorial, rearrange it in a way that images of the same class are under the same folder. Then, name the folders with the corresponding class labels.\n",
     "\n",
-    "**Option 2:** Scrapping images from Google Images\n",
+    "**Option 2:** Scraping images from Google Images\n",
     "\n",
-    "If you do not have a dataset in-hand, you can scrape images from [Google Images](https://www.google.com/imghp?hl=en) and make up a dataset of your choice. In order to do so, simply install [Fatkun Batch Download Image](https://chrome.google.com/webstore/detail/fatkun-batch-download-ima/nnjjahlikiabnchcpehcpkdeckfgnohf) extension on your google chrome browser and download any set of google images by clicking the extension tab. Place all images of same class under same folder and name it accordingly with the class label.  \n",
+    "If you do not have a dataset in-hand, you can scrape images from [Google Images](https://www.google.com/imghp?hl=en) and make up a dataset of your choice. In order to do so, simply install [Fatkun Batch Download Image](https://chrome.google.com/webstore/detail/fatkun-batch-download-ima/nnjjahlikiabnchcpehcpkdeckfgnohf) extension on your google chrome browser and download any set of google images by clicking the extension tab. Place all images of the same class under the same folder and name it accordingly with the class label.  \n",
     "\n",
     "**Option 3:** Working with my Monkeys dataset, which I originally scraped from Google Images :)\n",
     "\n",
@@ -421,7 +423,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's create training and validation sets,"
+    "Let's split our dataset to 80% for training and 20% for validation,"
    ]
   },
   {
@@ -505,6 +507,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The CNN architucture used here is [ResNet34](https://arxiv.org/pdf/1512.03385.pdf). This architecture has had a great success within last few years and ResNets are still considered state-of-the-art, so I believe there is great value in discussing it a bit. If you are interested solely in getting the Image Recognizer to work, feel free to skip the next couple paragraphs.\n",
+    "\n",
+    "What is special about ResNet architecture is how it tackles the common problem among most deep networks of _the vanishing gradient_, where gradients get infinitively small as they back-propogate to earlier layers of the network. This shrinking of the gradients is caused by the repeated multipliation of the derivatives from the final layers all the way to the first layers, which what we refer to as backpropagation. When the gradients are too small, they do not have much of an effect on the layer weights. Therefore, vanishing gradients would not allow to adequately update the initial layers and would result in a degraded performance.\n",
+    "\n",
+    "\n",
+    "So Resnet architecture proposes an \"identity shortcut connection\" or often referred to as a \"skip connection\", which simply skips one or more layers. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Let's pick the appropriate learning rate parameter,"
    ]
   },
@@ -554,13 +569,13 @@
    "source": [
     "Use the above plot to pick adequate learning rates for your model. We need two learning rates since we are using [cyclic learning rates](https://arxiv.org/pdf/1506.01186.pdf):\n",
     "\n",
-    "- The first learning rate is just before the loss starts to increase, preferrably 10x smaller than the rate at which the loss starts to increase. For instance, 1e-02 for our Monkeys Face Recognition dataset. \n",
+    "- The first learning rate is just before the loss starts to increase, preferably 10x smaller than the rate at which the loss starts to increase. For instance, 1e-02 for our Monkeys Face Recognition dataset. \n",
     "\n",
     "- The second learning rate is 10x smaller than the first learning rate, so 1e-03 in our example.\n",
     "\n",
     "The plot will be different for your dataset, so make sure to pick these two learning rates accordingly.\n",
     "\n",
-    "<br>Replace your chosen learning rates in the **slice** fucntion below and let's train the model"
+    "<br>Replace your chosen learning rates in the **slice** function below and let's train the model."
    ]
   },
   {
