Added resnet brief description

--- a/Image_Recognizer_Tutorial.ipynb
+++ b/Image_Recognizer_Tutorial.ipynb
@@ -507,20 +507,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The CNN architucture used here is [ResNet34](https://arxiv.org/pdf/1512.03385.pdf). This architecture has had a great success within last few years and ResNets are still considered state-of-the-art, so I believe there is great value in discussing it a bit. If you are interested solely in getting the Image Recognizer to work, feel free to skip the next couple paragraphs.\n",
+    "The CNN architecture used here is [ResNet34](https://arxiv.org/pdf/1512.03385.pdf). ResNet architecture has had great success within the last few years and still considered state-of-the-art, so I believe there is great value in discussing it a bit. If you are interested solely in getting the Image Recognizer to work, feel free to skip the next few paragraphs.\n",
     "\n",
-    "What is special about ResNet architecture is how it tackles the common problem among most deep networks of _the vanishing gradient_, where gradients get infinitively small as they back-propogate to earlier layers of the network. This shrinking of the gradients is caused by the repeated multipliation of the derivatives from the final layers all the way to the first layers, which what we refer to as backpropagation. When the gradients are too small, they do not have much of an effect on the layer weights. Therefore, vanishing gradients would not allow to adequately update the initial layers and would result in a degraded performance.\n",
+    "What is special about ResNet architecture is how it tackles _the degradation problem_ most common in deep networks, where the model accuracy gets saturated and then degrades rapidly. It is important to note here that although some assume that the core idea behind ResNets is overcoming the notorious _vanishing gradient problem_, where gradients get infinitely small as they back-propagate to earlier layers of the network, this is not quite true. \n",
     "\n",
+    "Resnet architecture introduces an \"identity shortcut connection\" or often referred to as a \"skip connection\", which skips one or more layers. The shortcut connections simply perform identity mappings, and their outputs are added to\n",
+    "the outputs of the stacked layers, as shown in the figure below. The skip function creates what is known as a residual block, F(x) in our figure, and that's where the name Residual Nets (ResNets) came from.  \n",
     "\n",
-    "So Resnet architecture proposes an \"identity shortcut connection\" or often referred to as a \"skip connection\", which simply skips one or more layers. \n",
-    "\n"
+    "<img width=\"286\" alt=\"Tutorial1_img1\" src=\"https://user-images.githubusercontent.com/8379428/56853841-f6429600-68e1-11e9-9cf3-a2ca324c277b.png\">\n",
+    "\n",
+    "Comprehensive empirical evidence has shown that the addition of these identity mappings allows the model to go deeper without degradation in performance and such networks are easier to optimize than plain stacked layers. There are several variants of ResNets, such as ResNet50, ResNet101, ResNet152; the number represents the number of layers (depth) of the ResNet. \n",
+    "\n",
+    "<img width=\"216\" alt=\"Tutorial1_img1\" src=\"https://user-images.githubusercontent.com/8379428/56853787-5e44ac80-68e1-11e9-9750-e9f5e417cf1e.png\">\n",
+    "\n",
+    "Image credit: [ResNet34](https://arxiv.org/pdf/1512.03385.pdf)\n",
+    "\n",
+    "In this tutorial, we are using ResNet34. Feel free to try any of the other ResNet models by simply replacing `models.resnet34` by `models.resnet50` for instance, but bare in mind that increasing the number of layers would require more GPU memory."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's pick the appropriate learning rate parameter,"
+    "Let's now pick the appropriate learning rate parameter,"
    ]
   },
   {
@@ -569,7 +578,7 @@
    "source": [
     "Use the above plot to pick adequate learning rates for your model. We need two learning rates since we are using [cyclic learning rates](https://arxiv.org/pdf/1506.01186.pdf):\n",
     "\n",
-    "- The first learning rate is just before the loss starts to increase, preferably 10x smaller than the rate at which the loss starts to increase. For instance, 1e-02 for our Monkeys Face Recognition dataset. \n",
+    "- The first learning rate is just before the loss starts to increase, preferably 10x smaller than the rate at which the loss starts to increase. For instance, 1e-02 for our Monkeys dataset. \n",
     "\n",
     "- The second learning rate is 10x smaller than the first learning rate, so 1e-03 in our example.\n",
     "\n",
@@ -808,7 +817,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Acknowledgment:** This tutorial uses [fastai library](https://docs.fast.ai/index.html), so we thank Jeremy Howard and [fast.ai](https://www.fast.ai/)."
+    "**Acknowledgment:** This tutorial uses [fastai library](https://docs.fast.ai/index.html), so we thank Jeremy Howard and [fast.ai](https://www.fast.ai/).\n",
+    "\n",
+    "If you found this tutorial useful, please follow me on [Medium](https://towardsdatascience.com/https-medium-com-drchemlal-deep-learning-tutorial-1-f94156d79802) for more and send few claps :)"
    ]
   }
  ],
